--- a/src/app/pages/color-picker/color-picker.component.scss
+++ b/src/app/pages/color-picker/color-picker.component.scss
@@ -7,6 +7,7 @@
 
 .color-picker-icon {
   width: 36px;
+  font-size: 30px;
 }
 
 .theme-buttons {
