--- a/src/app/pages/todos-list/todo-add/todo-add.component.scss
+++ b/src/app/pages/todos-list/todo-add/todo-add.component.scss
@@ -20,10 +20,6 @@
   color: white;
 }
 
-.mat-expansion-panel-body {
-  background-color: white;
-}
-
 form {
   padding: 0 24px 16px;
 }
